# taqyon

./: .gitignore  LICENSE.spdx  LICENSE_MIT  README.md  frontend-setup.js  package-lock.json  package.json  taqyon-cli.js
cli/: create-app.js  file-utils.js  index.js  qt-utils.js
docs/: README.md  backend-counter-implementation.md  frontend-backend-communication.md
templates/: qwebchannel-bridge.js
templates/frontend/react-js/: vite.config.js
templates/frontend/react-js/src/: App.css
templates/frontend/react-ts/src/: App.tsx  qwebchannel-bridge.ts
templates/frontend/react/src/: App.jsx
templates/frontend/svelte-js/: package-lock.json  vite.config.js
templates/frontend/svelte-ts/: svelte.config.ts  tsconfig.json
templates/frontend/svelte-ts/src/: App.svelte
templates/frontend/vue-js/: package.json  vite.config.js
templates/frontend/vue-js/public/: qwebchannel-loader.js
templates/frontend/vue-js/src/components/: HelloWorld.vue
templates/frontend/vue-ts/: index.html  tsconfig.json  vite.config.ts
templates/frontend/vue-ts/src/: App.vue  qwebchannel-bridge.ts
templates/frontend/vue-ts/src/components/: HelloWorld.vue
templates/frontend/vue/src/: App.vue
templates/src/: CMakeLists.txt  backendobject.cpp  build.sh  main.cpp  mywebpage.cpp  mywebpage.h  mywebview.cpp  mywebview.h
templates/src/app/: app_setup.cpp  app_setup.h  main.cpp  mainwindow.cpp  mainwindow.h
templates/src/backend/: backendobject.h
